--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "bootstrap": "5.1.3",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-bootstrap": "^2.1.1",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
