--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "12.0.8",
     "react": "17.0.2",
     "react-bootstrap": "^2.1.1",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
