--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "axios": "^0.25.0",
-    "bootstrap": "5.1.3",
-    "next": "12.0.8",
+    "next": "^12.0.10",
     "react": "17.0.2",
-    "react-bootstrap": "^2.1.1",
     "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.2",
     "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8"
+    "eslint-config-next": "12.0.8",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.18"
   }
 }
