--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "axios": "^0.25.0",
     "bootstrap": "5.1.3",
     "next": "12.0.8",
     "react": "17.0.2",
