--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.5.2",
     "animate.css": "^4.1.1",
     "axios": "^0.25.0",
     "bootstrap": "5.1.3",
+    "js-cookie": "^3.0.1",
     "next": "12.0.9",
     "react": "17.0.2",
     "react-bootstrap": "^2.1.1",
