--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.5.1",
+    "@mui/lab": "^5.0.0-alpha.74",
     "@mui/material": "^5.5.2",
     "animate.css": "^4.1.1",
     "axios": "^0.25.0",
