--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "5.1.3",
     "js-cookie": "^3.0.1",
     "next": "12.1.5",
+    "nprogress": "^0.2.0",
     "react": "18.0.0",
     "react-bootstrap": "^2.2.3",
     "react-copy-to-clipboard": "^5.1.0",
