--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "animate.css": "^4.1.1",
     "axios": "^0.26.1",
     "bootstrap": "5.1.3",
+    "cookie": "^0.5.0",
     "js-cookie": "^3.0.1",
     "next": "12.1.5",
     "nprogress": "^0.2.0",
