--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.7",
-    "@chakra-ui/react": "2.0.0-next.0",
+    "@chakra-ui/react": "2.0.0-next.1",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
@@ -19,6 +19,7 @@
     "axios": "^0.26.1",
     "bootstrap": "5.1.3",
     "cookie": "^0.5.0",
+    "copy-to-clipboard": "^3.3.1",
     "framer-motion": "^6.3.0",
     "js-cookie": "^3.0.1",
     "next": "12.1.5",
