--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.7",
+    "@chakra-ui/react": "2.0.0-next.1",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
@@ -17,13 +19,16 @@
     "axios": "^0.26.1",
     "bootstrap": "5.1.3",
     "cookie": "^0.5.0",
+    "copy-to-clipboard": "^3.3.1",
+    "framer-motion": "^6.3.0",
     "js-cookie": "^3.0.1",
     "next": "12.1.5",
     "nprogress": "^0.2.0",
     "react": "18.0.0",
     "react-bootstrap": "^2.3.0",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "eslint": "8.13.0",
